# bdtd-scraper

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bdtd_scraper/: api.py  constants.py  theses_downloader.py
