[tool.poetry]
name = "bdtd-scraper"
version = "0.1.0"
description = "Ferramenta para obter informações da Biblioteca Digital Brasileira de Teses e Dissertações"
authors = ["Jessica Sousa <jessicasousa.pc@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bdtd_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
pandas = "2.0.3"
rich = "13.5.2"
levenshtein = "0.21.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
make_whitelist = true
min_confidence = 80
sort_by_size = true
verbose = true
paths = ["bdtd_scraper"]
